[metadata]
name = bqfetch
version = 1.0.1
author = Tristan Bilot
author_email = bilot.tristan@hotmail.fr
description = A tool to fetch tables from BigQuery as pandas DataFrames, fast.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TristanBilot/bqfetch
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True